force-app/main/default/objects/Inspections__c/Inspections__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT050230 - Created for phase 1</description>
    <label>Inspections</label>
    <nameField>
        <displayFormat>INSP-{0000}</displayFormat>
        <label>Inspections Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>