force-app/main/default/objects/Inspections__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>PacPoint - FWT 050220 - For PVL Phase 1</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>