force-app/main/default/objects/Inspections__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint - FWT 050220 - For PVL Phase 1</description>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>