force-app/main/default/objects/Inspections__c/fields/InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDate__c</fullName>
    <description>PacPoint - FWT 050220 - For PVL Phase 1</description>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>