force-app/main/default/objects/Inspections__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <description>PacPoint - FWT 050220 - For PVL Phase 1</description>
    <label>Inspector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>